# ai_claim

./: .dockerignore  .env.example  .gitignore  .graphify_uncached.txt  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  multi_task.md  pyproject.toml
.github/workflows/: deploy.yml
configs/: agent_claude_router.env.example  agent_claude_sample_mcp_config.json  agent_claude_sample_prompt.txt  app.env.example  azure_openai.env.example  domain_policy.json  knowledge_roots.json
docs/: 01_chenh_lech_tu_duy_pathway_va_agent_claude.md  02_tieu_chi_ingest_neo4j.md  03_kien_truc_muc_tieu_ai_claim.md  04_version_feedback_memory.md  05_luong_quyet_dinh_y_te_bao_hiem.md  06_pathway_hay_agent_cho_ingest.md  07_domain_lock_va_azure.md  08_trang_thai_trien_khai.md  09_goi_ai_claim_len_web.md  PRD_phase2_dashboard_evolution.md  user_guide_vn.md
docs/handoffs/: README.md  report_9router.md  report_pathway_agent_claude.md  report_test_9router_hc_insurance.md
scripts/: analyze_duel_run.py  bootstrap_knowledge_tree.py  check_runtime_stack.py  deploy_smoke_test.py  emit_restricted_agent_launch_spec.py  import_external_context.py  run_live_duel.py  run_reasoning_case.py  smoke_test.py  start_ai_claim_server.ps1  start_server.ps1  stop_ai_claim_server.ps1
services/azure-proxy/: .env.example  9router_stack.md  Dockerfile  README.md  anthropic_compat_server.py  azure_anthropic_skd.py  bootstrap_9router_stack.py  invoke_claude_code_via_9router.ps1  invoke_claude_code_via_azure_proxy.ps1  (+6 more)
solution/: dashboard.html  dashboard_templates.js  management.html
src/: __init__.py
(+426 files in other folders)
