[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-claim"
version = "0.1.0"
description = "AI Claim reasoning platform for medical and insurance graph workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "neo4j>=5.21",
  "pydantic>=2.8",
  "openai>=1.45",
  "python-multipart>=0.0.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
